fix scrollbars on overflow menus

--- a/components/Style.less
+++ b/components/Style.less
@@ -226,7 +226,7 @@ input:disabled{
 }
 
 
-.ed-box{
+.ed-box,.ed-menu{
 	&::-webkit-scrollbar{
 		-webkit-appearance: none;
 		background-color: @bg2;
@@ -244,6 +244,10 @@ input:disabled{
 			background-color: #8F8F8F;
 		}
 	}
+}
+
+.ed-box{
+	
 
 	
 	&.ed-scroll{
